objects/ssot__ClaimCase__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CaseId__c</fullName>
        <label>Case</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClaimId__c</fullName>
        <label>Claim</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Claim Case Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>